# mepa-spidev-proxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_lan80xx_regs_header.py  lan80xx_regs.h  lan80xx_spid.c  log.c  log.h  mepa_spidev_proxyConfig.cmake.in  parse.c  parse.h  spi_proxy_mepaConfig.cmake.in  spiproxy.h  spiproxy_cli.c
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: build.yml  cflite-batch.yml  cflite-cron.yml  cflite-pr.yml
fuzz/: Makefile  README.md  afl.sh  fuzz.cmake  fuzz_common.h  fuzz_frame.c  fuzz_msg.c  fuzz_resp.c  gen_seeds.py  run.sh  spiproxy.dict
